<font color=#FF8C00>&#9830;</font> Install: Set the vertical spacing for Raidframes to 25.
<font color=#FF8C00>&#9830;</font> Install: showPlayer in GroupFrames.
<font color=#FF8C00>&#9830;</font> Install: Add EmptyBars for Raidframes to the Install.
<font color=#FF8C00>&#9830;</font> Install: Use libAnim 2.01 for the Installation Process. (Credit Benik)
<font color=#FF8C00>&#9830;</font> Misc: Add libAnim 2.01, delete libAnim 1.0
<font color=#FF8C00>&#9830;</font> Misc: Add new Fonts "Merathilis PROTOTYPE_RU" and "Merathilis Expressway" use this for the Chat/ Tooltip and Skada. Also made appropriate changes so that it's available in ruRU clients.
<font color=#FF8C00>&#9830;</font> Misc: Add a few new Textures to SharedMedia - Credits: Limb0 (SharedMedia:Renaitre)
<font color=#FF8C00>&#9830;</font> GameMenu: Use libAnim 2.01 for top- and bottomPanel (thx Benik for your help :p)
<font color=#FF8C00>&#9830;</font> Quest: Delete the Quest Skin.
<font color=#FF8C00>&#9830;</font> UnitFrames: Delete EmptyBars on Raidframes now Part in BenikUI.
<font color=#FF8C00>&#9830;</font> Skins: Fix a Error if MasterPlan is disable.

<b><u> v1.05, 26.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Core: Change the SlashCommand to enter the Setup "/muisetup".
<font color=#FF8C00>&#9830;</font> Install: MerathilisUI Install Process should now appears after BenikUI Install is finished. (If BenikUI is loaded.)
<font color=#FF8C00>&#9830;</font> Misc: Shows a Chat notification if a Battle.net Friend switch Games or goes on-/ offline. (Credits Clinton Caldwell)
<font color=#FF8C00>&#9830;</font> Misc: Add a FactionLogo-Texture to the right Chat. -- Credits Alex (Chat Textures Pack - ElvUI)
<font color=#FF8C00>&#9830;</font> Misc: Replace ufFont & visitor1 Font with one that supports cyrillics.
<font color=#FF8C00>&#9830;</font> Skins: MasterPlan: Skin the Missions of Interest tab for naval missions. (Requires MasterPlan 0.74.1)

<b><u> v1.04, 22.10.2015</b></u>